--- a/.github/workflows/deploy-terraform-v2.yaml
+++ b/.github/workflows/deploy-terraform-v2.yaml
@@ -1,18 +1,17 @@
 name: Terraform - Create Resources
 
 on:
-  pull_request:
-    branches: [ "master" ]
-    paths:
-      - 'backend-config/**'
-      - 'infrastructure/**'
-    types: [opened, synchronize, reopened]
-
   push:
     branches: [ "master" ]
     paths:
       - 'backend-config/**'
       - 'infrastructure/**'
+  pull_request:
+    branches: [ "master" ]
+    paths:
+      - 'backend-config/**'
+      - 'infrastructure/**'    
+    types: [opened, synchronize, reopened]
 
 jobs:
   check-commit:
@@ -22,9 +21,9 @@ jobs:
       (contains(github.event.pull_request.title, '#terraform') ||
        contains(github.event.pull_request.body, '#terraform'))
     steps:
-      - run: echo "Pull Request válido para execução do Terraform Workflow."
+      - run: echo "Commit válido para execução do Terraform Workflow."
 
-  # 1. BACKEND PLAN (runs on PR)
+  # Backend Plan (runs on PR)
   backend-plan:
     if: github.event_name == 'pull_request'
     needs: check-commit
@@ -34,67 +33,49 @@ jobs:
       BACKEND_DIR: "./backend-config"
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-      - name: Terraform Configuration
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.11.0
+    - name: Terraform Configuration
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.11.0
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Determine Backend Mode
-        run: |
-          REAL_BUCKET="tfstate-cluster-redis-jheimmys"
-          if aws s3api head-bucket --bucket "$REAL_BUCKET" 2>/dev/null; then
-            echo "USE_REAL=true" >> $GITHUB_ENV
-          else
-            echo "USE_REAL=false" >> $GITHUB_ENV
-          fi
+    - name: Terraform Init
+      working-directory: ${{ env.BACKEND_DIR }}
+      run: terraform init
 
-      - name: Terraform Init (backend)
-        working-directory: ${{ env.BACKEND_DIR }}
-        run: |
-          if [ "${USE_REAL}" = "true" ]; then
-            terraform init \
-              -backend-config="bucket=tfstate-cluster-redis-jheimmys" \
-              -backend-config="key=cluster-redis/terraform.tfstate" \
-              -backend-config="dynamodb_table=terraform-lock" \
-              -backend-config="region=${{ secrets.AWS_REGION }}" 
-          else
-            terraform init
-          fi
+    - name: Terraform Plan
+      working-directory: ${{ env.BACKEND_DIR }}
+      run: |
+        terraform plan -no-color -lock=false > plan_output.txt
+        echo "PLAN_OUTPUT<<EOF" >> $GITHUB_ENV
+        cat plan_output.txt >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
+      id: plan
 
-      - name: Terraform Plan (backend)
-        working-directory: ${{ env.BACKEND_DIR }}
-        run: |
-          terraform plan -no-color -lock=false > plan_output.txt
-          echo "PLAN_OUTPUT<<EOF" >> $GITHUB_ENV
-          cat plan_output.txt >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-        id: plan
+    - name: Post Plan to PR
+      uses: actions/github-script@v6
+      env:
+        PLAN_OUTPUT: ${{ env.PLAN_OUTPUT }}
+      with:
+        script: |
+          const output = `### Terraform Plan (Backend) \n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
+          await github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: output
+          });
 
-      - name: Post Plan to PR (backend)
-        uses: actions/github-script@v6
-        env:
-          PLAN_OUTPUT: ${{ env.PLAN_OUTPUT }}
-        with:
-          script: |
-            const output = `### Terraform Plan (Backend)\n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
-            await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            });
-
-  # 2. INFRA PLAN (runs on PR)
+  # Infra Plan (runs on PR) - Usa bucket temporário para validação
   infra-plan:
     if: github.event_name == 'pull_request'
     needs: [check-commit, backend-plan]
@@ -102,186 +83,143 @@ jobs:
     environment: terraform-plan
     env:
       INFRA_DIR: "./infrastructure"
+      TF_STATE_BUCKET: "temp-tfstate-${{ github.event.pull_request.number }}-${{ github.run_id }}"
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-      - name: Terraform Configuration
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.11.0
+    - name: Terraform Configuration
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.11.0
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Determine State Bucket
-        run: |
-          REAL_BUCKET="tfstate-cluster-redis-jheimmys"
-          if aws s3api head-bucket --bucket "$REAL_BUCKET" 2>/dev/null; then
-            echo "STATE_BUCKET=$REAL_BUCKET" >> $GITHUB_ENV
-          else
-            TEMP_BUCKET="temp-tfstate-${{ github.event.pull_request.number }}-${{ github.run_id }}"
-            echo "STATE_BUCKET=$TEMP_BUCKET" >> $GITHUB_ENV
-            aws s3api create-bucket \
-              --bucket "$TEMP_BUCKET" \
-              --region ${{ secrets.AWS_REGION }}
-          fi
+    - name: Create Temporary S3 Bucket
+      run: |
+        aws s3api create-bucket \
+          --bucket ${{ env.TF_STATE_BUCKET }} \
+          --region ${{ secrets.AWS_REGION }} \
 
-      - name: Terraform Init (infra)
-        working-directory: ${{ env.INFRA_DIR }}
-        run: |
-          terraform init \
-            -backend-config="bucket=${STATE_BUCKET}" \
-            -backend-config="key=cluster-redis/terraform.tfstate" \
-            -backend-config="region=${{ secrets.AWS_REGION }}" \
-            -backend-config="skip_credentials_validation=true" \
-            -backend-config="skip_region_validation=true"
+    - name: Terraform Init
+      working-directory: ${{ env.INFRA_DIR }}
+      run: |
+        terraform init \
+          -backend-config="bucket=${{ env.TF_STATE_BUCKET }}" \
+          -backend-config="skip_credentials_validation=true" \
+          -backend-config="skip_region_validation=true"
 
-      - name: Terraform Plan (infra)
-        working-directory: ${{ env.INFRA_DIR }}
-        run: |
-          terraform plan -no-color -lock=false > plan_output.txt
-          echo "INFRA_PLAN_OUTPUT<<EOF" >> $GITHUB_ENV
-          cat plan_output.txt >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+    - name: Terraform Plan
+      working-directory: ${{ env.INFRA_DIR }}
+      run: |
+        terraform plan -no-color -lock=false > plan_output.txt
+        echo "INFRA_PLAN_OUTPUT<<EOF" >> $GITHUB_ENV
+        cat plan_output.txt >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
 
-      - name: Post Plan to PR (infra)
-        uses: actions/github-script@v6
-        env:
-          PLAN_OUTPUT: ${{ env.INFRA_PLAN_OUTPUT }}
-        with:
-          script: |
-            const output = `### Terraform Plan (Infra)\n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
-            await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            });
+    - name: Post Plan to PR
+      uses: actions/github-script@v6
+      env:
+        PLAN_OUTPUT: ${{ env.INFRA_PLAN_OUTPUT }}
+      with:
+        script: |
+          const output = `### Terraform Plan (Infra) \n\n\`\`\`\n${process.env.PLAN_OUTPUT}\n\`\`\``;
+          await github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: output
+          });
 
-  # 3. BACKEND APPLY (merge na master)
+    - name: Cleanup Temporary Bucket  # Remove after use
+      if: always()
+      run: aws s3 rb s3://${{ env.TF_STATE_BUCKET }} --force
+
+  # Backend Apply (runs on merge to master)
   deploy-backend:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
+    environment: deploy-backend
     env:
       BACKEND_DIR: "./backend-config"
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-      - name: Terraform Configuration
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.11.0
+    - name: Terraform Configuration
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.11.0
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Check Existing Resources
-        id: check_resources
-        run: |
-          if aws s3api head-bucket --bucket "$REAL_BUCKET" 2>/dev/null; then
-            echo "bucket_exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "bucket_exists=false" >> $GITHUB_OUTPUT
-          fi
-        
-          if aws dynamodb describe-table --table-name "$DYNAMO_TABLE" 2>/dev/null; then
-            echo "table_exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "table_exists=false" >> $GITHUB_OUTPUT
-          fi
+    - name: Terraform Init
+      working-directory: ${{ env.BACKEND_DIR }}
+      run: terraform init
 
-      - name: Create S3 Bucket if Needed
-        if: steps.check_resources.outputs.bucket_exists == 'false'
-        run: |
-          aws s3api create-bucket \
-            --bucket "$REAL_BUCKET" \
-            --region ${{ secrets.AWS_REGION }}
+    - name: Terraform Apply
+      working-directory: ${{ env.BACKEND_DIR }}
+      run: terraform apply -auto-approve
 
-      - name: Create DynamoDB Table if Needed
-        if: steps.check_resources.outputs.table_exists == 'false'
-        run: |
-          aws dynamodb create-table \
-            --table-name "$DYNAMO_TABLE" \
-            --attribute-definitions AttributeName=LockID,AttributeType=S \
-            --key-schema AttributeName=LockID,KeyType=HASH \
-            --billing-mode PAY_PER_REQUEST
+    - name: Export Bucket Name
+      working-directory: ${{ env.BACKEND_DIR }}
+      run: echo "BUCKET_NAME=$(terraform output -raw s3_bucket_name)" >> $GITHUB_ENV
 
-      - name: Terraform Init
-        working-directory: ${{ env.BACKEND_DIR }}
-        run: terraform init
-
-      - name: Import Existing Resources
-        if: steps.check_resources.outputs.bucket_exists == 'true' || steps.check_resources.outputs.table_exists == 'true'
-        working-directory: ${{ env.BACKEND_DIR }}
-        run: |
-          if [ "${{ steps.check_resources.outputs.bucket_exists }}" == "true" ]; then
-            terraform import aws_s3_bucket.tf_state "$REAL_BUCKET"
-          fi
-          if [ "${{ steps.check_resources.outputs.table_exists }}" == "true" ]; then
-            terraform import aws_dynamodb_table.tf_lock "$DYNAMO_TABLE"
-          fi
-
-      - name: Terraform Apply
-        working-directory: ${{ env.BACKEND_DIR }}
-        run: terraform apply -auto-approve
-
-      - name: Set Output Variable
-        working-directory: ${{ env.BACKEND_DIR }}
-        id: backend_outputs
-        run: echo "bucket_name=$REAL_BUCKET" >> $GITHUB_OUTPUT
+    - name: Set Output Variable
+      working-directory: ${{ env.BACKEND_DIR }}
+      id: backend_outputs
+      run: echo "bucket_name=$(terraform output -raw s3_bucket_name)" >> $GITHUB_OUTPUT
 
     outputs:
       bucket_name: ${{ steps.backend_outputs.outputs.bucket_name }}
 
-  # 4. INFRA APPLY (merge na master)
+  # Infra Apply (runs on merge to master) - Usa bucket real criado pelo backend
   deploy-infra:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     needs: deploy-backend
     runs-on: ubuntu-latest
+    environment: deploy-infra
     env:
       INFRA_DIR: "./infrastructure"
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-      - name: Terraform Configuration
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.11.0
+    - name: Terraform Configuration
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.11.0
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Terraform Init (infra)
-        working-directory: ${{ env.INFRA_DIR }}
-        run: terraform init \
-             -backend-config="bucket=${{ needs.deploy-backend.outputs.bucket_name }}" \
-             -backend-config="key=cluster-redis/terraform.tfstate" \
-             -backend-config="region=${{ secrets.AWS_REGION }}"
+    - name: Terraform Init (with real backend)
+      working-directory: ${{ env.INFRA_DIR }}
+      run: terraform init -backend-config="bucket=${{ needs.deploy-backend.outputs.bucket_name }}"
 
-      - name: Terraform Apply (infra)
-        working-directory: ${{ env.INFRA_DIR }}
-        run: terraform apply -auto-approve
+    - name: Terraform Apply
+      working-directory: ${{ env.INFRA_DIR }}
+      run: terraform apply -auto-approve
 
-      - name: Configure EKS Access
-        working-directory: ${{ env.INFRA_DIR }}
-        run: |
-          aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
-          kubectl get nodes
+    - name: Configure EKS Access
+      working-directory: ${{ env.INFRA_DIR }}
+      run: |
+        aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
+        kubectl get nodes
